<resources>
    <string name="app_name">Gitub APP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="github">GitHub</string>
    <string name="enter_your_user_id">Enter Your User Id</string>
    <string name="check">check</string>
    <string name="todo">TODO</string>
    <string name="gf">TODO</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="public_repos">Public Repos</string>
    <string name="twitter_username">Twitter Username</string>
    <string name="locaction">Locaction</string>
    <string name="check_repositories">Check Repositories</string>
    <string name="watched">Watched</string>
    <string name="issu">Issu</string>
    <string name="gfuyy">TODO</string>
    <string name="company">Company</string>
    <string name="hireable">Hireable</string>
</resources>