<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:textAlignment="viewStart"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/i958"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <Button
        android:id="@+id/repbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="249dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/check_repositories"
        android:backgroundTint="#3F51B5"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/following"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pi" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/t11"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/twitter_username"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/company"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/hireable"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/i1110"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/t11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/locaction"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/public_repos"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="66dp"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/followers"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/i2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/pi"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        android:src="@drawable/githubimage"
        android:contentDescription="@string/gf" />

    <TextView
        android:id="@+id/i1"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#111111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pi"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/i2"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#111111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/pi"
        app:layout_constraintTop_toBottomOf="@+id/i1" />

</androidx.constraintlayout.widget.ConstraintLayout>