<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_marginTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/guc"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:textColor="#111111"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/starc"
            android:layout_width="80dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:textAlignment="center"
            android:textColor="#111111"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/gfuyy"
            android:scaleType="fitCenter"
            android:src="@drawable/gitic"
            app:layout_constraintStart_toEndOf="@+id/starc"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/gfuyy"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_star_border_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter"
            android:src="@drawable/img"
            android:contentDescription="@string/gfuyy" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:textAlignment="viewStart"
            android:textColor="#111111"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:textColor="#111111"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/watched"
            android:textAlignment="viewStart"
            android:textColor="#111111"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:text="@string/issu"
            android:textAlignment="viewStart"
            android:textColor="#111111"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:textColor="#111111"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:textAlignment="viewStart"
            android:textColor="#111111"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>